--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 body {
   font-size: 1.6rem;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: var(--gris-claro);
 }
 html {
@@ -59,7 +59,12 @@ header h1 {
 .formulario {
   width: 95%;
   margin: 10rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
 }
+
 @media (min-width: 768px) {
   .formulario {
     margin: 5rem auto;
@@ -69,7 +74,7 @@ header h1 {
 .formulario legend {
   font-size: 3.6rem;
   text-align: center;
-  display: block;
+  width: 100%;
   text-transform: uppercase;
   color: var(--blanco);
   margin-bottom: 4rem;
@@ -78,6 +83,7 @@ header h1 {
 }
 .formulario .campo {
   display: grid;
+  width: 100%;
   margin-bottom: 2rem;
 }
 
@@ -86,18 +92,20 @@ header h1 {
   font-size: 2.8rem;
   text-align: center;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
-.formulario input[type="text"],
-.formulario input[type="number"] {
+.formulario input[type='text'],
+.formulario input[type='number'] {
   background-color: var(--gris-claro);
   border-radius: 1rem;
+  width: 100%;
   padding: 1rem;
   border: none;
   flex: 1;
   font-size: 1.6rem;
 }
-.formulario input[type="submit"] {
+.formulario input[type='submit'] {
   background-color: #1048a4;
   border: none;
   padding: 1rem;
@@ -111,12 +119,12 @@ header h1 {
   transition: background-color 300ms ease;
 }
 @media (min-width: 768px) {
-  .formulario input[type="submit"] {
+  .formulario input[type='submit'] {
     display: block;
     padding: 1rem 5rem;
   }
 }
-.formulario input[type="submit"]:hover {
+.formulario input[type='submit']:hover {
   background-color: #042a67;
   cursor: pointer;
 }
@@ -152,12 +160,11 @@ header h1 {
 }
 .contenedor-presupuesto {
   margin-top: -5rem;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   transform: translateY(5rem);
+  padding: 0;
 }
 .dos-columnas {
   flex-direction: column;
@@ -178,8 +185,8 @@ header h1 {
     margin-bottom: 0;
   }
 }
-.formulario input[type="text"].nuevo-presupuesto,
-.formulario input[type="number"].nuevo-presupuesto {
+.formulario input[type='text'].nuevo-presupuesto,
+.formulario input[type='number'].nuevo-presupuesto {
   font-size: 2.8rem;
   text-align: center;
 }
@@ -190,7 +197,19 @@ header h1 {
 
 .contenido-presupuesto {
   width: 100%;
+  padding: 0 40px;
 }
+
+.campo__filtros {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.presupuesto__progress {
+  padding: 40px 40px 0 40px;
+}
+
 .contenido-presupuesto p {
   font-weight: 400;
   color: var(--gris-oscuro);
